fix(v2): safe area top issue on iphone

--- a/front-v2/src/app/components/home/home.component.scss
+++ b/front-v2/src/app/components/home/home.component.scss
@@ -3,7 +3,6 @@
 
 .header {
   position: fixed;
-  top: 0;
   left: 0px;
   display: flex;
   justify-content: center;
@@ -18,6 +17,14 @@
   color: white;
   box-shadow: 0px 1px 10px 0 black;
   padding: 30px 20px;
+  top: 0;
+  @supports (padding: max(0px)) {
+    top: max(0px, env(safe-area-inset-top));
+    padding-top: max(30px, env(safe-area-inset-top));
+    padding-bottom: max(30px, env(safe-area-inset-bottom));
+    padding-left: max(20px, env(safe-area-inset-left));
+    padding-right: max(20px, env(safe-area-inset-right));
+  }
   box-sizing: border-box;
   z-index: 1;
 
